--- a/HelloDoc/Views/AdminDash/SendOrder.cshtml
+++ b/HelloDoc/Views/AdminDash/SendOrder.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model DAL.ViewModel.SendOrder;
+
+@{
     ViewData["Title"] = "SendOrder";
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
@@ -16,23 +18,22 @@
 
             <div class="row">
                 <div class="col col-12 col-sm-6">
-                    <select class="form-select py-3 form-select" aria-label="Select Profession">
-                        <option selected>All Regions</option>
-                        <option data-value="1">One</option>
-                        <option data-value="2">Two</option>
-                        <option data-value="3">Three</option>
-                        <option data-value="4">four</option>
+                    <select class="form-select py-3 form-select" aria-label="Select Profession" id="ProfessionNameDropDown">
+                            <option selected value="0">Select Profession</option>
+                     @foreach (var item in Model.ProfessionName)
+                            {
+                                <option value="@item.HealthProfessionalId">@item.ProfessionName</option>
+                            }
+                       
                     </select>
                 </div>
                 <div class="col col-12 col-sm-6 mb-3">
                     <div class="form-floating">
-                        <input type="text"
-                               class="form-control"
-                               id="floatingPassword"
-                               placeholder="Password" />
-                        <label for="floatingPassword">Business</label>
+                            <select class="form-select py-3 form-select" aria-label="Select Business" id="BusinessDropDown">
+                                <option selected value="0">Select BusinessName</option>
+                          
 
-                    </div>
+                            </select>
                 </div>
             </div>
             <div class="row">
@@ -60,6 +61,7 @@
                 <div class="col col-sm-6 col-12">
                     <div class="form-floating mb-3">
                         <input type="email" id="email"
+                            asp-for="@Model.FaxNum"
                                class="form-control"
                                id="floatingInput"
                                placeholder="name@example.com" />
@@ -116,3 +118,6 @@
 </div>
      </div>
 
+
+
+   
