--- a/HelloDoc/Views/AdminDash/AdminDash.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminDash.cshtml
@@ -25,9 +25,9 @@
    
 
         @* -------------------------------gutters--------------------------------------------- *@
- <div class="row gx-4 gy-4 mt-4 ms-3 me-3 " style="margin-top:3rem">
-            <div class="col-4 col-xl-2 col-md-4 ">
-            <div class="px-3 py-2  border  rounded-4 position-relative" id="divnew" style="background-color:#e9eaef">
+ <div class="row gx-4 gy-4 mt-4 ms-3" style="margin-top:3rem">
+            <div class="col-6 col-xl-2 col-md-4 ">
+            <div class="px-2 py-2  border  rounded-4 position-relative" id="divnew" style="background-color:#e9eaef">
                 <a id="New">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -40,8 +40,8 @@
                 </a>
                 </div>
             </div> 
-            <div class="col-4 col-xl-2 col-md-4 ">
-            <div class="px-3 py-2 border rounded-4 position-relative" style="background-color:#e5f2f8;color:#0dcaf0;" id="divpen">
+            <div class="col-6 col-xl-2 col-md-4 ">
+            <div class="px-2 py-2 border rounded-4 position-relative" style="background-color:#e5f2f8;color:#0dcaf0;" id="divpen">
                   <a id="Pending">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill me-2" viewBox="0 0 16 16">
@@ -54,8 +54,8 @@
                   </a>
                 </div>
             </div> 
-            <div class="col-4 col-xl-2 col-md-4 ">
-            <div class="px-3 py-2 border  rounded-4 position-relative" style="background-color:#e9f0e8"  id="divact">
+            <div class="col-6 col-xl-2 col-md-4 ">
+            <div class="px-2 py-2 border  rounded-4 position-relative" style="background-color:#e9f0e8"  id="divact">
                 <a id="Active">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -68,8 +68,8 @@
                 </a>
                 </div>
             </div> 
-            <div class="col-4 col-xl-2 col-md-4 ">
-            <div class="px-3 py-2 border  rounded-4 text-pink position-relative" style="background-color:#f7e6ee" id="divcon">
+            <div class="col-6 col-xl-2 col-md-4 ">
+            <div class="px-2 py-2 border  rounded-4 text-pink position-relative" style="background-color:#f7e6ee" id="divcon">
                    <a id="Conclude">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -82,8 +82,8 @@
                    </a>
                 </div>
             </div>  
-            <div class="col-4 col-xl-2 col-md-4 ">
-            <div class="px-3 py-2 border  rounded-4 position-relative" style="background-color:#e5eef5" id="divclo">
+            <div class="col-6 col-xl-2 col-md-4 ">
+            <div class="px-2 py-2 border  rounded-4 position-relative" style="background-color:#e5eef5" id="divclo">
                 <a id="ToClose">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -96,8 +96,8 @@
                 </a>
                 </div>
             </div>  
-            <div class="col-4 col-xl-2 col-md-4 ">
-            <div class="px-3 py-2 border  rounded-4 position-relative" style="background-color:#efeef4" id="divun">
+            <div class="col-6 col-xl-2 col-md-4 ">
+            <div class="px-2 py-2 border  rounded-4 position-relative" style="background-color:#efeef4" id="divun">
                 <a id="UnPaid">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -174,7 +174,7 @@
                 </select>
             </div>
         </div>
-        <div class="d-flex  col-xl-6  col-sm-12 justify-content-end   ">
+        <div class="d-flex flex-wrap col-xl-6  col-sm-12 justify-content-end   ">
             <button class="active-filter filter-options d-flex align-items-center  px-3 py-1 rounded btn filter-btn" data-value="">
                 <span>All</span>
             </button>
