--- a/HelloDoc/Views/AdminDash/SendOrder.cshtml
+++ b/HelloDoc/Views/AdminDash/SendOrder.cshtml
@@ -13,12 +13,13 @@
         <a><button type="button" class="btn btn-primary btn  border border-info bg-transparent text-info shadow-none text-decoration-none"> < Back</button></a>
     </div>
     <div class="shadow bg-white p-4">
-       
-        <form method="post" id="" enctype="multipart/form-data">
+
+            <form method="post" asp-action="SendOrder"  enctype="multipart/form-data">
 
             <div class="row">
                 <div class="col col-12 col-sm-6">
-                    <select class="form-select py-3 form-select" aria-label="Select Profession" id="ProfessionNameDropDown">
+                   
+                    <select class="form-select py-3 form-select" asp-for="Name" aria-label="Select Profession" id="ProfessionNameDropDown">
                             <option selected value="0">Select Profession</option>
                      @foreach (var item in Model.ProfessionName)
                             {
@@ -27,21 +28,20 @@
                        
                     </select>
                 </div>
-                <div class="col col-12 col-sm-6 mb-3">
-                    <div class="form-floating">
-                            <select class="form-select py-3 form-select" aria-label="Select Business" id="BusinessDropDown">
-                                <option selected value="0">Select BusinessName</option>
-                          
+              <div class="col col-12 col-sm-6 mb-3">
 
+                        <select class="form-select py-3 form-select" asp-for="vendorId" aria-label="Select Business" id="BusinessDropDown">
+                                <option selected value="0">Select BusinessName</option>
                             </select>
-                </div>
             </div>
+                </div>
             <div class="row">
                 <div class="col col-sm-6 col-12">
                     <div class="form-floating">
-                        <input type="date"
+                        <input type="text"
+                                   asp-for="BusinessContact"
                                class="form-control"
-                               id="floatingPassword"
+                               id="Contact"
                                placeholder="Password" />
                         <label for="floatingPassword">Business Contact</label>
                     </div>
@@ -49,8 +49,9 @@
                 <div class="col col-sm-6  col-12">
                     <div class="form-floating mb-3">
                         <input type="text"
+                            asp-for="Email"
                                class="form-control"
-                               id="floatingPassword"
+                               id="Email"
                                placeholder="Password" />
                         <label for="floatingPassword">Email</label>
                     </div>
@@ -60,10 +61,10 @@
             <div class="row">
                 <div class="col col-sm-6 col-12">
                     <div class="form-floating mb-3">
-                        <input type="email" id="email"
-                            asp-for="@Model.FaxNum"
+                        <input type="text"
+                            asp-for="FaxNum"
                                class="form-control"
-                               id="floatingInput"
+                               id="Fax"
                                placeholder="name@example.com" />
                         <label for="floatingInput">Fax Number</label>
 
@@ -76,6 +77,7 @@
                 <div class="col col-12 mb-3">
                     <div class="form-floating">
                         <textarea class="form-control"
+                        asp-for="Disciription"
                                   placeholder="Leave a comment here"
                                   id="floatingTextarea2"
                                   style="height: 100px"></textarea>
@@ -102,7 +104,7 @@
 
 
                 <a>
-                    <button type="submit" class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="SaveBtn">
+                    <button type="submit"  class="btn border-none bg-info p-2 text-light fw-semibold me-4" id="SaveBtn">
                         Submit
                     </button>
                 </a>
