--- a/HelloDoc/Views/AdminDash/AdminDash.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminDash.cshtml
@@ -5,7 +5,8 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
     int i = 0;
     int j = 0;
-   
+    int a = 0;
+
 }
 <style>
     .triangle {
@@ -27,7 +28,7 @@
         @* -------------------------------gutters--------------------------------------------- *@
  <div class="row gx-4 gy-4 mt-4 ms-3" style="margin-top:3rem">
             <div class="col-6 col-xl-2 col-md-4 ">
-            <div class="px-2 py-2  border  rounded-4 position-relative" id="divnew" style="background-color:#e9eaef">
+            <div class="px-2 py-2  border  rounded-4 position-relative status" id="divnew" style="background-color:#e9eaef">
                 <a id="New">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -41,7 +42,7 @@
                 </div>
             </div> 
             <div class="col-6 col-xl-2 col-md-4 ">
-            <div class="px-2 py-2 border rounded-4 position-relative" style="background-color:#e5f2f8;color:#0dcaf0;" id="divpen">
+        <div class="px-2 py-2 border rounded-4 position-relative status"  id="divpen">
                   <a id="Pending">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-fill me-2" viewBox="0 0 16 16">
@@ -55,7 +56,7 @@
                 </div>
             </div> 
             <div class="col-6 col-xl-2 col-md-4 ">
-            <div class="px-2 py-2 border  rounded-4 position-relative" style="background-color:#e9f0e8"  id="divact">
+        <div class="px-2 py-2 border  rounded-4 position-relative status" style="background-color:#e9f0e8" id="divact">
                 <a id="Active">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -69,7 +70,7 @@
                 </div>
             </div> 
             <div class="col-6 col-xl-2 col-md-4 ">
-            <div class="px-2 py-2 border  rounded-4 text-pink position-relative" style="background-color:#f7e6ee" id="divcon">
+        <div class="px-2 py-2 border  rounded-4 text-pink position-relative status" style="background-color:#f7e6ee" id="divcon">
                    <a id="Conclude">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -83,7 +84,7 @@
                 </div>
             </div>  
             <div class="col-6 col-xl-2 col-md-4 ">
-            <div class="px-2 py-2 border  rounded-4 position-relative" style="background-color:#e5eef5" id="divclo">
+        <div class="px-2 py-2 border  rounded-4 position-relative status" style="background-color:#e5eef5" id="divclo">
                 <a id="ToClose">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -97,7 +98,7 @@
                 </div>
             </div>  
             <div class="col-6 col-xl-2 col-md-4 ">
-            <div class="px-2 py-2 border  rounded-4 position-relative" style="background-color:#efeef4" id="divun">
+        <div class="px-2 py-2 border  rounded-4 position-relative status" style="background-color:#efeef4" id="divun">
                 <a id="UnPaid">
                     <div class="d-flex align-items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill me-2" viewBox="0 0 16 16">
@@ -265,8 +266,7 @@
             </div>
         </div>
     </div>
-
-    @* -----------CancelCase Modal  --------------------------- *@
+    @* -----------CancelCase Modal end  --------------------------- *@
 
     @* -----------AssignCase Modal  --------------------------- *@
     <div class="modal fade" id="AssignCaseModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -317,7 +317,7 @@
             </div>
         </div>
     </div>
-    @* -----------AssignCase Modal  --------------------------- *@
+    @* -----------AssignCase Modal end --------------------------- *@
 
 
     @* -----------BlockCase Modal  --------------------------- *@
@@ -350,7 +350,55 @@
             </div>
         </div>
     </div>
-    @* -----------BlockCase Modal  --------------------------- *@
+    @* -----------BlockCase Modal end  --------------------------- *@
+    @* -----------TransferCase Modal  --------------------------- *@
+    <div class="modal fade" id="TransferModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header bg-info">
+                    <h1 class="modal-title fs-5  text-white" id="exampleModalLabel">Transfer Request</h1>
+                    <button type="button" class="btn-close shadow-none" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="TransferModalSubmit">
+                    <div class="modal-body">
+                        <p> To assign this request search and select another physician</p>
+
+                        <select class="form-select py-2 my-3 shadow-none border" name="Regionoftra" id="regiondropdownoftra">
+                            <option value="0" selected>Narrow Search By Region</option>
+                            @foreach (var item in Model)
+                            {
+                                @if (a == 0)
+                                {
+                                    @foreach (var it in item.region)
+                                    {
+                                        <option value="@it.RegionId">@it.Name</option>
+                                    }
+                                }
+                                a++;
+                            }
+                        </select>
+                        <input id="trarequest" name="transferid" hidden />
+
+                        <select class="form-select py-2 my-3 shadow-none border" name="phyidtra" id="physiciandropdownoftra">
+                        </select>
+
+                        <div class="form-floating mt-3">
+                            <textarea class="form-control border border-info" name="Descriptionoftra" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                            <label for="floatingTextarea2">Description</label>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <div class="d-flex justify-content-end mt-3">
+                            <button type="submit" class="btn btn-info">Confirm</button>
+                            <button type="button" data-bs-dismiss="modal" class="btn btn-outline-info ms-3">cancle</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    @* -----------TransferCase Modal  --------------------------- *@
     @* -------------------------------Modal--------------------------------------------- *@
        
         @* -------------------------------Search--------------------------------------------- *@
